# faith-brains

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/ai/: answer.py  base.py  claude.py  embeddings.py  guard.py  openai_chat.py  provider.py
backend/app/api/: learner_routes.py  ratelimit.py  routes.py  schemas.py
backend/app/content/: learning_paths.py  personas.py
backend/app/db/: engine.py  models.py
backend/app/ingest/: common.py  embed.py  hadith_fawazahmed.py  quran_metadata.py  quran_tanzil.py  tafsir.py  translations_quranenc.py  validate.py
backend/app/retrieval/: arabic.py  fulltext.py  reference.py  service.py  vector.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_extensions_editions_quran.py  0002_hadith.py  0003_search_indexes.py  0004_ask_logs.py  0005_halfvec.py  0006_tafsir_learners.py  0007_persona_conversations.py
backend/scripts/: download_sources.py  eval_retrieval.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_ask.py  test_conversations.py  test_learner.py  test_persona.py  test_unit_retrieval.py
deploy/: compose.prod.yml
docs/: licensing.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: HadithCard.tsx  NavTabs.tsx  PathList.tsx  PersonaOnboarding.tsx  SaveButton.tsx  TafsirToggle.tsx  VerseCard.tsx
frontend/src/lib/: api.ts  persona.ts  saved.ts  session.ts
(+9 files in other folders)
