[project]
name = "faithbrains-backend"
version = "0.1.0"
description = "FaithBrains backend — Islamic learning assistant API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pgvector>=0.3.6",
    "httpx>=0.28",
    "anthropic>=0.79",
    "openai>=1.60",
    "google-genai>=1.16",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: needs a running Postgres (docker compose up -d db)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
